fixing conditional text in ahelp tags fdo#49268

Change-Id: Ife25790d2ef3ffbacc05a97ac682757b841a1eb8
Signed-off-by: Andras Timar <atimar@suse.com>